<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hint">没啥作用</string>
    <string name="text_button_btn">马上开始</string>
    <string name="text_theme1">青春背景</string>
    <string name="text_theme_num1">1/4</string>
    
    <string name="text_skin_btn">更换皮肤</string>
    <string name="text_settings">通用设置</string>
    <string name="text_copyright">版本更新</string>
    <string name="text_help">帮        助</string>
    <string name="text_about">关        于</string>
    <string name="version_url">http://lichengfeng.cn/version.xml</string>
    
    <string name="network_unuseable">网络不可用</string>
    <string name="press_again_to_quit">再按一次退出</string>
    <string name="input_cannot_empty">输入不可为空</string>
    
    
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    <string name="app_name">The Flash</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">发送</string>
    <string name="start_dialog">test</string>
    <string name="title_activity_skin_page">SkinPage</string>
    <string name="setting">设置</string>
    <string name="yuyin">语音聊天模式</string>
    <string name="play_start_sound">播放开始音</string>
    <string name="play_end_sound">播放结束音</string>
    <string name="dialog_tips_sound">对话框提示音</string>
    <string name="show_vol">显示识别音量</string>
    <string name="choose_prop_type">请选择垂直领域类型：</string>
    <string name="choose_language">请选择识别语言：</string>
    <string name="choose_dialog_theme">请选择识别对话框样式：</string>
    <string-array name="welcome_tips">
        <item>主人，奴婢在此等候多时了</item>
        <item>主人，近来一切可好</item>
        <item>亲爱的，我想死你了</item>
        <item>欢迎归来，我亲爱的主人</item>
        <item>我是barry，很高兴为您服务</item>
    </string-array>
    
    <string-array name="prop_tpye">
        <item>输入</item>
        <item>热词</item>
        <item>地图</item>
        <item>音乐</item>
        <item>视频</item>
        <item>应用</item>
        <item>网页</item>
        <item>健康</item>
        <item>购物</item>
        <item>打电话</item>
    </string-array>
    
    <string-array name="languages">
        <item>普通话(中国)</item>
        <item>粤语(中国)</item>
        <item>英语(美国)</item>
    </string-array>
    
    <string-array name="dialog_theme">
        <item>暗蓝</item>
        <item>亮蓝</item>
        <item>暗绿</item>
        <item>亮绿</item>
        <item>暗橙</item>
        <item>亮橙</item>
        <item>暗红</item>
        <item>亮红</item>
    </string-array>
    
    <string-array name="command_tips">
        <item>合肥天气怎么样</item>
        <item>打电话给暴雪客服</item>
        <item>合肥到深圳的飞机票</item>
        <item>讲个笑话</item>
        <item>合肥工大怎么走</item>
    </string-array>
    
    <!-- eggs strings @20160303 begin -->
    <string name="kiss">亲亲</string>
    <!-- eggs strings @20160303 end -->

</resources>
